--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
         "tailwindcss": "^3.0.0",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "datamaps": "^0.5.9",
+        "vue3-select2-component": "^0.1.7"
     }
 }
